bad/redefine_builtin_function_error.example_compiler_output
ERROR
[1mbad/redefine_builtin_function_error.lat:2:1: [1;31merror: [0;1mcannot define function having the same name as the predefined function `error`[m
void error() {}
[1;32m^[m
